WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
211280
REGRESSION: MotionMark 1.1 regressed due to
r260016
https://bugs.webkit.org/show_bug.cgi?id=211280
Summary
REGRESSION: MotionMark 1.1 regressed due to r260016
Antoine Quint
Reported
2020-05-01 01:18:27 PDT
REGRESSION: MotionMark 1.1 regressed due to
r260016
Attachments
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2020-05-01 01:31:13 PDT
<
rdar://problem/61898830
>
Antoine Quint
Comment 2
2020-05-01 01:32:20 PDT
Committed
r260989
: <
https://trac.webkit.org/changeset/260989
>
Antoine Quint
Comment 3
2020-05-05 06:01:18 PDT
Reverted
r260989
for reason: Mistakenly identified cause of MotionMark 1.1 performance regression Committed
r261162
: <
https://trac.webkit.org/changeset/261162
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug