REGRESSION: MotionMark 1.1 regressed due to r260016 https://bugs.webkit.org/show_bug.cgi?id=211280 <rdar://problem/61898830>

Unreviewed.

Source/WebCore:

* html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::drawImage):
* platform/graphics/BitmapImage.cpp:
(WebCore::BitmapImage::draw):
* platform/graphics/GraphicsContext.cpp:
(WebCore::GraphicsContext::drawImage):

LayoutTests:

* fast/images/image-orientation-none-canvas.html:

Canonical link: https://commits.webkit.org/224171@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260989 268f45cc-cd09-0410-ab3c-d52691b4dbfc